--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 					<div class="col-lg-5 col-lg-offset-1 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
 						<address>
 							<p class="contact-title">CONTACT ME</p>
-							<p><i class="fa fa-envelope-o"></i>salim@vapeasnl.tech</p>
+							<p><i class="fa fa-envelope-o"></i>sabdessamad.salim@gmail.com</p>
 							<p><i class="fa fa-map-marker"></i>Morocco</p>
 						</address>
 					</div>
